- version change - added authors - changed gradle version - changed folia lib repo